# homepage

./: .gitignore  404.html  CHANGELOG.md  CNAME  LICENSE  Makefile  README.md  about.html  bower.json  build.js  cabal.project  gulpfile.js  header.html  homepage.cabal  index.html  manifest.json  package-lock.json  package.json  sw.js  workbox-config.js  workbox-routing.prod.v2.0.0.js.map  workbox-runtime-caching.prod.v2.0.0.js  workbox-runtime-caching.prod.v2.0.0.js.map
assets/: fonts.css  index.js  normalize.css  open_sans.css  print_style.css  script.js  style.css
dev/: sw.js
haskell/: free-garden.hs  free-sums.hs
html/: 404.html  about.html  ctx.json  index.html
images/: free-cat-morphism.xcf  marcinszamotulski-large.xcf  monad-associativity.xcf
latex/: either-peano.tex  foldNatFree-mmorph-join.tex  foldNatFree-mmorph-unit.tex  foldNatFree-nat.tex  free-cat-morphism.tex  liftFree-nat.tex  m-algebra-cats-k.tex  m-algebra-cats.tex  m-algebra-morphism.tex  monad-associativity.tex  monad-unitality.tex  monoid-in-moncat-associativity.tex  monoid-in-moncat-unitality.tex  one-object-cat.tex  ping-pong.tex  tr-graph.tex
posts/: adts-and-universal-algebra.html  base.html  feed.json  free-monads.hs  free-monads.html  freeness.html  peano-algebras-in-haskell.html
presentations/: .gitignore  Makefile  free-categories-and-state-machines.tex  iosimpor.tex  monoidal-synchronisation.tex  typed-protocol-pipelining.tex
scripts/: build.js  ship.sh
src/: rssbuilder.hs
templates/: 404.html  about.html  about_header.html  base.html  feed.rss  head.html  header.html  (+2 more)
(+133 files in other folders)
