cabal-version:       2.4
name:                homepage
version:             0.1.0.0
synopsis:            Literate haskell blog posts
homepage:            https://coot.me
license:             BSD-3-Clause
license-file:        LICENSE
author:              Marcin Szamotulski
maintainer:          profunctor@pm.me
extra-source-files:  CHANGELOG.md, README.md

library
  build-depends:       base >=4.12,
                       free >=5.1 && <6,
                       free-algebras >=0.0.8.0 && <0.0.9.0,
                       QuickCheck
  hs-source-dirs:      templates/posts
  default-language:    Haskell2010
  exposed-modules:
    FiniteStateMachines
    KleisliCategoriesAndFreeMonads
    CategoriesWithMonadicEffects
    MonadicIO
    Data.Functor.Monoidal
